# haskellcosm

./: .gitignore  CONTRIBUTING.md  README.md
app/: README.md
app/analysis/: README.md  hscosm-stat.cabal  package.yaml  stack.yaml
app/analysis/src/: Html.hs  Main.hs  Types.hs
app/api/: LICENSE  README.md  hscosm-api.cabal  package.yaml  stack.yaml
app/api/src/: Api.hs  Config.hs  Main.hs  Types.hs
app/app/: README.md  hscosm-app.cabal
app/app/src/: Main.hs
communities/: list.csv
companies/: .~lock.active.csv#  active.csv  inactive.csv
media/: README.md
media/podcasts/: list.csv
media/video/: list.csv
