name:                hscosm-stat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sigrlami/hscosm-stat#readme
license:             MIT
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           Copyright: (c) 2019 Sergey Bushnyak
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hscosm-stat
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , DBFunctor
                     , text
                     , time
